# Rubbish_Gomoku-with-forbidden-hand

./: CMakeLists.txt  README.md  main.c  temp.c
body/: AI.c  forbiddenHand.c  mainFuction.c  part12.c  test  value.c  value.h
body(另一个复件)/: AI.c  AI.h  forbiddenHand.c  forbiddenHand.h  mainFuction.c  part12.h  test  value.h
body(复件)/: AI.c  AI.h  forbiddenHand.c  forbiddenHand.h  part12.h  temp.c  test  value.h
body(复件)冲四出问题/: AI.c  forbiddenHand.c  forbiddenHand.h  temp.c  test  value.c
body(还行，偏防守/: AI.c  forbiddenHand.c  part12.c  temp.c  test
draft/: 1.c  2.c  3.c  4.c  6.c  beautifulBoard.c  forbiddenHandUsefulInValue.c  tempMain.c  tempgorilla.c  unfinished5.c  whowin.c  whowin.h
functions/: whoWin.c
openMindTree/: AI.h  algor.c  generator.c  part12.c  part12.h  value.h  whowin.c
to be continue/: maxminAlgo.c  maxminAlgo.h  stackRecord.c  stackRecord.h
